--- a/templates/posts/edit_post.html.twig
+++ b/templates/posts/edit_post.html.twig
@@ -2,23 +2,44 @@
 {% block content %}
     <h2 class="mt-3 mb-4">Edit your Post</h2>
     <div class="form form_edit_post">
-        {% if photoPath is defined %}
-            <img style="height: 300px; width: auto; border-radius: 5px; border: 2px solid gray; margin-bottom: 30px;"
-                 src="{{ asset('uploads/photos/') }}{{ photoPath }}">
-        {% else %}
-            <div style="width: 300px; height: 200px; border-radius: 5px; border: 2px solid gray; text-align: center; margin-bottom: 30px; padding-top: 70px; ">
-                <h1>No image</h1></div>
-        {% endif %}
-        {{ form_start(form) }}
-        {{ form_widget(form) }}
+        <div class="row">
+            <div class="col-6">
+                <h1>Post:</h1>
+                {{ form_start(form) }}
+                {{ form_row(form.Title) }}
+                {{ form_row(form.Content) }}
+                <div class="mt-3">{{ form_label(form.name) }}</div>
+                {{ form_widget(form.name) }}
+                <div class="col-6">
+                    <button class="btn btn-dark mt-5">Edit Post</button>
+                    <a href="/posts">
+                        <div class="btn btn-primary mt-5 ml-2" href="/posts">Back</div>
+                    </a>
+                </div>
+                {{ form_end(form) }}
+            </div>
+            <div class="col-6 pl-5">
+                <h1>Photo:</h1>
+                {% if photoPath is defined %}
+                    <img class="mt-3"
+                         style="height: auto; width: 60%; border-radius: 5px; border: 2px solid gray; margin-bottom: 30px;"
+                         src="{{ asset('uploads/photos/') }}{{ photoPath }}">
+                    <div>
+                        <form id="deletePhoto" action="{{ path('delete_post', {id: id}) }}" method="POST">
+                            <input type="hidden" name="onlyPhoto" value="onlyPhoto">
+                            <input type="submit" class="btn btn-danger" style="width: 60%;" value="Delete photo">
+                        </form>
+                    </div>
+                {% else %}
+                    <div style="width: 300px; height: 200px; border-radius: 5px; border: 2px solid gray; text-align: center; margin-bottom: 30px; padding-top: 70px; ">
+                        <h1>No image</h1></div>
+                {% endif %}
+            </div>
 
-        <button class="btn btn-dark mt-3">Edit Post</button>
-        <a href="/posts">
-            <div class="btn btn-primary mt-3 ml-2" href="/posts">Back</div>
-        </a>
-        {{ form_end(form) }}
+        </div>
+    </div>
     </div>
     <script>
-         document.querySelector("#post_form_name").className += "btn btn-secondary";
+        document.querySelector("#post_form_name").className += "btn btn-secondary";
     </script>
 {% endblock %}
