--- a/templates/posts/new_post.html.twig
+++ b/templates/posts/new_post.html.twig
@@ -8,8 +8,10 @@
         {{ form_row(form.Title) }}
         {{ form_row(form.Content) }}
         <div class="mt-3">{{ form_label(form.name) }}</div>
-       {{ form_widget(form.name) }}
-        <div><button class="btn btn-dark mt-5">Add Post</button></div>
+        {{ form_widget(form.name) }}
+        <div>
+            <button class="btn btn-dark mt-5">Add Post</button>
+        </div>
         {{ form_end(form) }}
     </div>
     <script>
