--- a/templates/posts/show_post.html.twig
+++ b/templates/posts/show_post.html.twig
@@ -4,24 +4,23 @@
         <div class="row">
             <div class="col-6">
                 <h1>Post:</h1>
-
                 {% if post == true %}
                     <p style="font-weight: bold;"><h4>Date:</h4>
-                        {{ post.Date|date("F jS \\a\\t g:ia") }}</p>
+                    {{ post.Date|date("F jS \\a\\t g:ia") }}</p>
                     <p><h4>Author:</h4>
-                        {{ post.User.Login }}</p>
+                    {{ post.User.Login }}</p>
                     <p><h4>Title:</h4>
-                        {{ post.Title }}</p>
+                    {{ post.Title }}</p>
                     <p><h4>Content:</h4>
-                        {{ post.Content }}</p>
+                    {{ post.Content }}</p>
                 {% endif %}
             </div>
             <div class="col-6">
                 <h1>Photo:</h1>
-
                 {% if photoPath is defined %}
-                    <img class="mt-3" style="height: auto; width: 70%; border-radius: 5px; border: 2px solid gray; margin-bottom: 30px;" src="{{ asset('uploads/photos/') }}{{ photoPath }}">
-                    <button class="btn btn-danger" style="width: 70%;">Delete photo</button>
+                    <img class="mt-3"
+                         style="height: auto; width: 70%; border-radius: 5px; border: 2px solid gray; margin-bottom: 30px;"
+                         src="{{ asset('uploads/photos/') }}{{ photoPath }}">
                 {% else %}
                     <div style="width: 300px; height: 200px; border-radius: 5px; border: 2px solid gray; text-align: center; margin-bottom: 30px; padding-top: 70px; ">
                         <h1>No image</h1>
