--- a/templates/posts/edit_post.html.twig
+++ b/templates/posts/edit_post.html.twig
@@ -10,6 +10,7 @@
                 {{ form_row(form.Content) }}
                 <div class="mt-3">{{ form_label(form.name) }}</div>
                 {{ form_widget(form.name) }}
+                {{ form_errors(form.name) }}
                 <div class="col-6">
                     <button class="btn btn-dark mt-5">Edit Post</button>
                     <a href="/posts">
