--- a/templates/posts/new_post.html.twig
+++ b/templates/posts/new_post.html.twig
@@ -9,6 +9,7 @@
         {{ form_row(form.Content) }}
         <div class="mt-3">{{ form_label(form.name) }}</div>
         {{ form_widget(form.name) }}
+        {{ form_errors(form.name) }}
         <div>
             <button class="btn btn-dark mt-5">Add Post</button>
         </div>
