--- a/templates/quests/edit_quest.html.twig
+++ b/templates/quests/edit_quest.html.twig
@@ -5,7 +5,8 @@
         <form action="{{ path('save_quest') }}" method="POST">
             <input type="hidden" name="id" value="{{ quest.Id }}">
             {% if is_granted('ROLE_ADMIN') %}
-                Content:<input class="form-control" type="textarea" name="Content" value="{{ quest.Content }}" required>
+                Content:<input class="form-control" type="textarea" oninvalid="setCustomValidity('Content must be between 3 and 200 characters.')"
+                               minlength="3" maxlength="200" name="Content" value="{{ quest.Content }}" required>
                 Date:<input class="form-control" type="date" min="{{ minDate }}" max="{{ maxDate }}" name="EndDate"
                     {% if questDate >= minDate %}
                         value="{{ questDate }}"
@@ -17,7 +18,7 @@
                 <div>
                     <select class="browser-default custom-select" name="user" required>
                         {% for user in users %}
-                            <option value="{{ user.id }}" selected>{{ user.login }}</option>
+                            <option value="{{ user.id }}">{{ user.login }}</option>
                         {% endfor %}
                     </select>
                 </div>
