--- a/templates/quests/new_quest.html.twig
+++ b/templates/quests/new_quest.html.twig
@@ -2,8 +2,8 @@
 {% block content %}
     <form class="form form_new_quest mt-3" action="{{ path('add_quest') }}" method="POST">
         <h1 class="mb-3">Create new quest</h1>
-        <div class="row">Content:<input class="form-control" type="textarea" name="Content" value="{{ quest.Content }}"
-                                        maxlength="200" required></div>
+        <div class="row">Content:<input class="form-control" type="textarea" oninvalid="setCustomValidity('Content must be between 3 and 200 characters.')"
+                                        minlength="3" maxlength="200" name="Content" value="{{ quest.Content }}" required></div>
         <div class="row mb-3">Date:<input class="form-control" type="date" min="{{ minDate }}" max="{{ maxDate }}"
                                           name="EndDate" required></div>
         <div class="row">Select user:<select class="browser-default custom-select" name="user" required>
