--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -14,7 +14,11 @@
         <h1>Create new user</h1>
         {{ form_start(registrationForm, {'start_attr': {'class': 'mt-3'}}) }}
         {{ form_row(registrationForm.login, {'row_attr': {'class': 'mt-2'}}) }}
-        {{ form_row(registrationForm.email, {'row_attr': {'class': 'mt-2'}}) }}
+        <div class="mt-2 mb-2" style="font-weight: bold;">
+            E-mail:
+        </div>
+            <input class="form-control" type="email"
+                   maxlength="50" name="email" required>
         <div class="mt-2">{{ form_row(registrationForm.plainPassword) }}</div>
         <div class="mt-2 mb-2" style="font-weight: bold;">Role:</div>
         <select class="browser-default custom-select" name="roles" required>
