--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -17,7 +17,8 @@
         <div class="mt-2 mb-2" style="font-weight: bold;">
             E-mail:
         </div>
-            <input class="form-control" type="email"
+            <input class="form-control" type="email" oninput="setCustomValidity('')"
+                   oninvalid="setCustomValidity('Enter User Name Here')"
                    maxlength="50" name="email" required>
         <div class="mt-2">{{ form_row(registrationForm.plainPassword) }}</div>
         <div class="mt-2 mb-2" style="font-weight: bold;">Role:</div>
