--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -15,17 +15,20 @@
                             <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
                         {% endif %}
                         <label class="sr-only" for="inputLogin">Login</label>
-                        <input type="text" value="{{ last_username }}" name="login" id="inputLogin" class="form-control" placeholder="Login" required autofocus>
+                        <input type="text" value="{{ last_username }}" name="login" id="inputLogin" class="form-control"
+                               placeholder="Login" required autofocus>
                         <label class="sr-only" for="inputPassword">Password</label>
-                        <input class="form-control mt-3" id="inputPassword" name="password" placeholder="Password" required type="password">
+                        <input class="form-control mt-3" id="inputPassword" name="password" placeholder="Password"
+                               required type="password">
                         <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
                         <div class="forgot mt-2">
                             <a href="{{ path('reset') }}">Forgot password?</a>
                         </div>
-                        <button class="btn btn-lg btn-primary " type="submit">Login</button>
+                        <button class="btn btn-lg btn-primary" type="submit">Login</button>
                     </form>
                 </div>
             </div>
         </div>
     </div>
-</div>{% endblock %}
+    </div>
+{% endblock %}
