--- a/templates/posts/show_post.html.twig
+++ b/templates/posts/show_post.html.twig
@@ -1,35 +1,9 @@
 {% extends('mainpage/main.html.twig') %}
 {% block content %}
     <style>
-        .show_image{
-            display:inline-block;
-            position: relative;
-        }
-        .show_image img{
-            transition: all 0.2s;
-        }
-        .zoom{
-            opacity: 0;
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            transition: all 0.4s;
-            max-width: 100%;
-        }
-        .show_image img:hover{
-            filter: blur(5px);
-            cursor: crosshair;
-        }
-        .show_image img:hover ~.zoom{
-            opacity: 1;
-            font-size: 45px;
-            color: black;
-        }
-        .zoom{
-            pointer-events: none;
-        }
+
     </style>
+
     <div class="post_show">
         <div class="row">
             <div class="col-6">
@@ -48,7 +22,7 @@
             <div class="col-6">
                 <h1>Photo:</h1>
                 {% if photoPath is defined %}
-                    <div class="show_image">
+                    <div class="show_image" data-toggle="modal" data-target="#exampleModal321">
                         <img class="mt-3"
                              style="max-width: 100%; border-radius: 5px; border: 2px solid gray; margin-bottom: 30px;"
                              src="{{ asset('uploads/photos/') }}{{ photoPath }}">
@@ -65,4 +39,23 @@
             <div class="btn btn-lg btn-primary mt-3 mb-4" href="/posts">Back</div>
         </a>
     </div>
+    <!-- Modal Photo -->
+    <div class="modal fade" id="exampleModal321" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-lg" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLabel"><h1>Photo</h1></h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    {% if photoPath is defined %}
+                            <img class="mt-3" style="max-height: 650px; width: 100%; " src="{{ asset('uploads/photos/') }}{{ photoPath }}">
+                    {% endif %}
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Modal Photo -->
 {% endblock %}
