--- a/templates/users/show_users.html.twig
+++ b/templates/users/show_users.html.twig
@@ -2,7 +2,14 @@
 {% block content %}
     {% if message is defined %}
         <div class="mt-3 alert alert-success alert-dismissible fade show" role="alert">
-            {{message}}
+            {{ message }}
+            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+            </button>
+        </div>
+    {% elseif error is defined %}
+        <div class="mt-3 alert alert-danger alert-dismissible fade show" role="alert">
+            {{ error }}
             <button type="button" class="close" data-dismiss="alert" aria-label="Close">
                 <span aria-hidden="true">&times;</span>
             </button>
@@ -73,7 +80,7 @@
                 <div class="modal-body text-center">
                     <h2>Change email</h2>
                     <form class="emailForm" method="Post" action="">
-                        <input type="email" name="email" class="form-control mt-3" id="exampleInputEmail1" aria-describedby="emailHelp">
+                        <input type="email" name="email" maxlength="50" class="form-control mt-3" id="exampleInputEmail" aria-describedby="emailHelp" required>
                     </div>
                     <button style="width:95%; margin:auto;" class="mt-3 mb-3 btn-lg btn-warning" type="submit">Save</button>
                 </form>
@@ -107,7 +114,7 @@ function get_number(clicked_id, email, role) {
     number = clicked_id;
     user_email = email;
     user_role = role;
-    document.querySelector('#exampleInputEmail1').placeholder = user_email;
+    document.querySelector('#exampleInputEmail').placeholder = user_email;
     document.querySelector('.role_input').value = user_role;
     document.querySelector('.emailForm').action = "/edit/email/".concat(number);
     document.querySelector('.editRole').action = "/edit/role/".concat(number);
