--- a/templates/posts/show_post.html.twig
+++ b/templates/posts/show_post.html.twig
@@ -1,9 +1,13 @@
 {% extends('mainpage/main.html.twig') %}
 {% block content %}
-    <style>
-
-    </style>
-
+     {% if message is defined %}
+        <div class="mt-3 alert alert-primary alert-dismissible fade show" role="alert">
+            {{message}}
+            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+            </button>
+        </div>
+    {% endif %}
     <div class="post_show">
         <div class="row">
             <div class="col-6">
