--- a/templates/posts/edit_post.html.twig
+++ b/templates/posts/edit_post.html.twig
@@ -1,5 +1,13 @@
 {% extends('mainpage/main.html.twig') %}
-{% block content %}
+    {% block content %}
+    {% if message != "" %}
+        <div class="mt-3 alert alert-primary alert-dismissible fade show" role="alert">
+            {{message}}
+            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+            </button>
+        </div>
+    {% endif %}
     <h2 class="mt-3 mb-4">Edit your Post</h2>
     <div class="form form_edit_post">
         <div class="row">
@@ -22,9 +30,7 @@
             <div class="col-6 pl-5">
                 <h1>Photo:</h1>
                 {% if photoPath is defined %}
-                    <img class="mt-3"
-                         style="height: auto; width: 60%; border-radius: 5px; border: 2px solid gray; margin-bottom: 30px;"
-                         src="{{ asset('uploads/photos/') }}{{ photoPath }}">
+                    <img class="mt-3" style="height: auto; width: 60%; border-radius: 5px; border: 2px solid gray; margin-bottom: 30px;" src="{{ asset('uploads/photos/') }}{{ photoPath }}">
                     <div>
                         <form id="deletePhoto" action="{{ path('delete_post', {id: id}) }}" method="POST">
                             <input type="hidden" name="onlyPhoto" value="onlyPhoto">
@@ -33,14 +39,14 @@
                     </div>
                 {% else %}
                     <div style="width: 300px; height: 200px; border-radius: 5px; border: 2px solid gray; text-align: center; margin-bottom: 30px; padding-top: 70px; ">
-                        <h1>No image</h1></div>
+                        <h1>No image</h1>
+                    </div>
                 {% endif %}
             </div>
 
         </div>
     </div>
-    </div>
-    <script>
-        document.querySelector("#post_form_name").className += "btn btn-secondary";
-    </script>
-{% endblock %}
+</div>
+<script>
+    document.querySelector("#post_form_name").className += "btn btn-secondary";
+</script>{% endblock %}
