--- a/templates/posts/edit_post.html.twig
+++ b/templates/posts/edit_post.html.twig
@@ -1,7 +1,7 @@
 {% extends('mainpage/main.html.twig') %}
     {% block content %}
     {% if message != "" %}
-        <div class="mt-3 alert alert-primary alert-dismissible fade show" role="alert">
+        <div class="mt-3 alert alert-success alert-dismissible fade show" role="alert">
             {{message}}
             <button type="button" class="close" data-dismiss="alert" aria-label="Close">
                 <span aria-hidden="true">&times;</span>
