Change role and email by admin

--- a/templates/posts/show_posts.html.twig
+++ b/templates/posts/show_posts.html.twig
@@ -45,7 +45,7 @@
                             </button>
                         </td>
                         <td style = "font-size: 25px;">
-                            {% if post.status == 1 %}<i style = "color: green" class="far fa-thumbs-up"></i>{% else %}<i style = "color: red" class="far fa-thumbs-down"></i>{% endif %}
+                            {% if post.status == 1 %}<i style = "color: green" class="fas fa-toggle-on"></i>{% else %}<i style = "color: gray" class="fas fa-toggle-off"></i>{% endif %}
                         </td>
                     </tr>
                     <!-- Delete post modal -->
