--- a/templates/users/show_users.html.twig
+++ b/templates/users/show_users.html.twig
@@ -33,10 +33,10 @@
                         <td>User</td>
                     {% endif %}
                     <td>
-                        <a class="btn btn-warning" data-target="#exampleModalCenterChangeEmail" data-toggle="modal">Change email</a>
+                        <a onclick="get_number(this.id, this.getAttribute('data-email'), this.getAttribute('data-role'))" class="btn btn-warning" id="{{ user.id }}" data-email="{{ user.email }}" data-role="{{ user.roles[0] }}" data-target="#exampleModalCenterChangeEmail" data-toggle="modal">Change email</a>
                     </td>
                     <td>
-                        <a class="btn btn-warning" data-target="#exampleModalCenterChangeRole" data-toggle="modal">Change role</a>
+                        <a onclick="get_number(this.id, this.getAttribute('data-email'), this.getAttribute('data-role'))" class="btn btn-warning" id="{{ user.id }}" data-email="{{ user.email }}" data-role="{{ user.roles[0] }}" data-target="#exampleModalCenterChangeRole" data-toggle="modal">Change role</a>
                     </td>
                     <td>
                         <a onclick="get_number(this.id)" class="btn btn-danger" id="{{user.id}}" data-target="#exampleModalCenterDelete" data-toggle="modal">Delete</a>
@@ -71,40 +71,53 @@
         <div class="modal-dialog modal-dialog-centered" role="document">
             <div class="modal-content">
                 <div class="modal-body text-center">
-                    Email
-                    <button class="btn-lg btn-outline-secondary mt-5 ml-2" data-dismiss="modal" type="button">Cancel</button>
-                </div>
+                    <h2>Change email</h2>
+                    <form class="emailForm" method="Post" action="">
+                        <input type="email" name="email" class="form-control mt-3" id="exampleInputEmail1" aria-describedby="emailHelp">
+                    </div>
+                    <button style="width:95%; margin:auto;" class="mt-3 mb-3 btn-lg btn-warning" type="submit">Save</button>
+                </form>
             </div>
         </div>
     </div>
-    <!--Email modal-->
-    <!--Role modal-->
-    <div aria-hidden="true" aria-labelledby="exampleModalCenterTitle" class="modal fade" id="exampleModalCenterChangeRole" role="dialog" tabindex="-1">
-        <div class="modal-dialog modal-dialog-centered" role="document">
-            <div class="modal-content">
-                <div class="modal-body text-center">
-                    Role
-                    <button class="btn-lg btn-outline-secondary mt-5 ml-2" data-dismiss="modal" type="button">Cancel</button>
+</div>
+<!--Email modal-->
+<!--Role modal-->
+<div aria-hidden="true" aria-labelledby="exampleModalCenterTitle" class="modal fade" id="exampleModalCenterChangeRole" role="dialog" tabindex="-1">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content">
+            <div class="mb-2 modal-body text-center">
+                <h2>Change role</h2>
+                <form class="editRole" method="Post" action="">
+                    <select class="role_input browser-default custom-select" name="roles" required>
+                        <option value="ROLE_ADMIN" selected="">Admin</option>
+                        <option value="ROLE_USER">User</option>
+                    </select>
                 </div>
-            </div>
+                <button style="width:95%; margin:auto;" class="mt-3 mb-3 btn-lg btn-warning" type="submit">Save</button>
+            </form>
         </div>
     </div>
-    <!-- Role modal-->
-    <script>
-        let number;
+</div></div><!-- Role modal--><script>
+let number;
+let user_email;
+let user_role;
 
-        function get_number(clicked_id) {
-            number = clicked_id;
-        }
+function get_number(clicked_id, email, role) {
+    number = clicked_id;
+    user_email = email;
+    user_role = role;
+    document.querySelector('#exampleInputEmail1').placeholder = user_email;
+    document.querySelector('.role_input').value = user_role;
+    document.querySelector('.emailForm').action = "/edit/email/".concat(number);
+    document.querySelector('.editRole').action = "/edit/role/".concat(number);
+}
 
-        document.querySelector(".delete_user").onclick = function () {
-            delete_trigger()
-        };
+document.querySelector(".delete_user").onclick = function () {
+    delete_trigger()
+};
 
 
-        function delete_trigger() {
-            window.location.href = '/user/delete/'.concat(number);
-        }
-    </script>
-
-{% endblock %}
+function delete_trigger() {
+    window.location.href = '/user/delete/'.concat(number);
+}</script>{% endblock %}
