Login page fixed

--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -1,8 +1,6 @@
-{% extends 'base.html.twig' %}
-
+{% extends 'mainpage/main.html.twig' %}
 {% block title %}Log in!
 {% endblock %}
-
 {% block body %}
     <link rel="stylesheet" href="{{ asset('css/login.css') }}">
     <div id="LoginForm">
