--- a/templates/mainpage/sidebar.html.twig
+++ b/templates/mainpage/sidebar.html.twig
@@ -1,14 +1,13 @@
 {% block sidebar %}
     <aside class="main-sidebar sidebar-dark-primary elevation-4">
         <a class="brand-link" href="/">
-            <i class="fab fa-docker" style="margin-left: 19px; size: 3px"></i>
+            <i class="fab fa-facebook-f" style="position:relative; margin-left: 19px; size: 3px; top:3px;"></i>
             <span class="brand-text font-weight-light" style="margin-left: 5px;">Pszemke.App!
             </span>
         </a>
         <div class="sidebar">
             <nav class="mt-2">
-                <ul class="nav nav-pills nav-sidebar flex-column" data-accordion="false" data-widget="treeview"
-                    role="menu">
+                <ul class="nav nav-pills nav-sidebar flex-column" data-accordion="false" data-widget="treeview" role="menu">
                     <li class="nav-item active treeview menu-open">
                         <a class="nav-link" href="#">
                             <i class="nav-icon fa fa-edit"></i>
