--- a/templates/mainpage/main.html.twig
+++ b/templates/mainpage/main.html.twig
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>
-            {% block title %}Welcome!
+            {% block title %}Facebook App
             {% endblock %}
         </title>
         <!-- Assets -->
@@ -22,6 +22,23 @@
                 <!-- Sidebar -->
                 <!-- Content -->
                     <div class="content-wrapper"> <div class="content">
+                        {% block alerts %}
+                            {% if message is defined %}
+                                <div class="mt-3 alert alert-success alert-dismissible fade show" role="alert">
+                                    {{message}}
+                                    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                                        <span aria-hidden="true">&times;</span>
+                                    </button>
+                                </div>
+                            {% elseif error is defined %}
+                                <div class="mt-3 alert alert-danger alert-dismissible fade show" role="alert">
+                                    {{ error }}
+                                    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                                        <span aria-hidden="true">&times;</span>
+                                    </button>
+                                </div>
+                            {% endif %}
+                        {% endblock %}
                         {% block content %}
                             {% include 'mainpage/hello_page.html.twig' %}
                         {% endblock %}
