--- a/templates/quests/show_one_quest.html.twig
+++ b/templates/quests/show_one_quest.html.twig
@@ -1,16 +1,7 @@
 {% extends 'mainpage/main.html.twig' %}
 {% block content %}
-    {% if message is defined %}
-        <div class="mt-3 alert alert-success alert-dismissible fade show" role="alert">
-            {{message}}
-            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                <span aria-hidden="true">&times;</span>
-            </button>
-        </div>
-    {% endif %}
     <div class="post_show">
         <h1 class="mb-5">Quest</h1>
-
         <div class="row">
             <div class="col-6">
                 <h2>Content:</h2>
@@ -21,26 +12,24 @@
                 {{ quest.addDate|date("m/d/Y") }}
                 <h2 class="mt-3">Deadline:</h2>
                 {{ quest.endDate|date("m/d/Y") }}</br>
-            </div>
         </div>
-        <h2 class="mt-3">Progress:</h2>
-        <div class="progress mt-4 mb-3">
-            <div class="progress-bar bg-success" role="progressbar" style="width: {{ quest.status }}%;"
-                 aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">{{ quest.status }}%
-            </div>
-        </div>
-
-        <a href="/quest/edit/{{ quest.id }}">
-            <button class="btn btn-warning mt-4">Edit</button>
-        </a>
-        {% if is_granted('ROLE_ADMIN') %}
-            <a href="{{ path('show_all_quests') }}">
-                <button class="btn btn-secondary mt-4 ml-2">Back</button>
-            </a>
-        {% elseif is_granted('ROLE_USER') %}
-            <a href="{{ path('show_user_quests', {id: app.user.id}) }}">
-                <button class="btn btn-secondary mt-4 ml-2">Back</button>
-            </a>
-        {% endif %}
     </div>
-{% endblock %}
+    <h2 class="mt-3">Progress:</h2>
+    <div class="progress mt-4 mb-3">
+        <div class="progress-bar bg-success" role="progressbar" style="width: {{ quest.status }}%;" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">{{ quest.status }}%
+        </div>
+    </div>
+
+    <a href="/quest/edit/{{ quest.id }}">
+        <button class="btn btn-warning mt-4">Edit</button>
+    </a>
+    {% if is_granted('ROLE_ADMIN') %}
+        <a href="{{ path('show_all_quests') }}">
+            <button class="btn btn-secondary mt-4 ml-2">Back</button>
+        </a>
+    {% elseif is_granted('ROLE_USER') %}
+        <a href="{{ path('show_user_quests', {id: app.user.id}) }}">
+            <button class="btn btn-secondary mt-4 ml-2">Back</button>
+        </a>
+    {% endif %}
+</div>{% endblock %}
