--- a/templates/chat/index.html.twig
+++ b/templates/chat/index.html.twig
@@ -2,54 +2,32 @@
 {% block content %}
     <h1>Chat example</h1>
 
-    <form>
-        <input name="username" placeholder="username" size="10">
-        <input name="message" placeholder="Your message..." size="50" autocomplete="off">
-        <input type="submit" value="Post">
+    <form action="{{ path('ping') }}" method="POST">
+        <button class="btn btn-secondary">Ping!</button>
     </form>
-    <hr>
+
+    {% for user in users %}
+    <ul>
+        <li>{{ user.login }}</li>
+        <li>{{ user.email }}</li>
+    </ul>
+    {% endfor %}
 
     <div id="messages">
         No messages
     </div>
-    <script type="application/json" id="config">
-    {{ config|json_encode()|raw }}
 
-    </script>
     <script>
-        const {topic, publishRoute} = JSON.parse(document.getElementById('config').textContent);
-
-        const subscribeURL = new URL('http://localhost:8080/hub');
-        subscribeURL.searchParams.append('topic', topic);
-
-        const es = new EventSource(subscribeURL);
-        let ul = null;
-        es.onmessage = ({data}) => {
-            const {username, message} = JSON.parse(data)
-            if (!username || !message) throw new Error('Invalid payload')
-
-            if (!ul) {
-                ul = document.createElement('ul');
-
-                const messages = document.getElementById('messages');
-                messages.innerHTML = '';
-                messages.append(ul);
-            }
-
-            const li = document.createElement('li')
-            li.append(document.createTextNode(`<${username}> ${message}`))
-            ul.append(li)
-        };
-
-        document.querySelector('form').onsubmit = function (e) {
-            e.preventDefault();
-
-            fetch(publishRoute, {
-                method: 'POST',
-                body: JSON.stringify({username: this.elements.username.value, message: this.elements.message.value})
-            });
-            this.elements.message.value = '';
-            this.elements.message.focus();
+        const url = new URL('http://localhost:8080/hub');
+        url.searchParams.append('topic', '1e9');
+        const eventSource = new EventSource(url)
+        eventSource.onmessage = e => {
+            document.querySelector('h1').insertAdjacentHTML('afterend', `<div class="alert alert-success">Ping!</div>`)
+            window.setTimeout(() => {
+                const $alert = document.querySelector('.alert')
+                $alert.parentNode.removeChild($alert)
+            }, 2000)
         }
     </script>
+
 {% endblock %}
