--- a/templates/chat/index.html.twig
+++ b/templates/chat/index.html.twig
@@ -1,33 +1,20 @@
 {% extends('mainpage/main.html.twig') %}
 {% block content %}
     <h1>Chat example</h1>
-
-    <form action="{{ path('ping') }}" method="POST">
+    <form action="{{ path('publisher', {topic: topic}) }}" method="POST">
+        <input type="text" name="Content" required>
         <button class="btn btn-secondary">Ping!</button>
     </form>
 
-    {% for user in users %}
-    <ul>
-        <li>{{ user.login }}</li>
-        <li>{{ user.email }}</li>
-    </ul>
-    {% endfor %}
-
-    <div id="messages">
-        No messages
-    </div>
+    <div class="interceptedMessages"></div>
 
     <script>
         const url = new URL('http://localhost:8080/hub');
         url.searchParams.append('topic', '1e9');
         const eventSource = new EventSource(url)
         eventSource.onmessage = e => {
-            document.querySelector('h1').insertAdjacentHTML('afterend', `<div class="alert alert-success">Ping!</div>`)
-            window.setTimeout(() => {
-                const $alert = document.querySelector('.alert')
-                $alert.parentNode.removeChild($alert)
-            }, 2000)
+            $interceptedMessage = e.data;
+            document.querySelector(".interceptedMessages").insertAdjacentHTML('beforeend', "<div>"+ $interceptedMessage+"</div>")
         }
     </script>
-
 {% endblock %}
