Relations in database repaired

--- a/templates/mainpage/sidebar.html.twig
+++ b/templates/mainpage/sidebar.html.twig
@@ -52,6 +52,23 @@
                         <a class="nav-link" href="#">
                             <i class="nav-icon fa fa-edit"></i>
                             <p>
+                                Chat
+                            </p>
+                        </a>
+                        <ul class="nav nav-treeview" style="display: block;">
+                            <li class="nav-item archive">
+                                <a class="nav-link button" href="{{ path('chat') }}">
+                                    <i class="fa fa-circle-o nav-icon"></i>
+                                    <p>Show chat</p>
+                                </a>
+                            </li>
+                        </ul>
+                    </li>
+                    <!--*********************************************************-->
+                    <li class="nav-item  active treeview menu-open">
+                        <a class="nav-link" href="#">
+                            <i class="nav-icon fa fa-edit"></i>
+                            <p>
                                 Account
                             </p>
                         </a>
