--- a/templates/mainpage/main.html.twig
+++ b/templates/mainpage/main.html.twig
@@ -68,10 +68,14 @@
                         }
                     });
                 });
+
+                window.onload = function changeCursor() {
+                    var selectors = document.querySelectorAll("h1, h2, h3, h4, h5, h6, th, tr, td");
+                    for(i=0; i<selectors.length; i++){
+                        selectors[i].style.cursor = "default";
+                    }
+                }
             </script>
-
-
-
         {% endblock %}
     </body>
 </html>
