--- a/templates/mainpage/hello_page.html.twig
+++ b/templates/mainpage/hello_page.html.twig
@@ -21,7 +21,7 @@
                 <div style="font-size: 50px;" id="date"></div>
             </div>
         </div>
-        <h5 style="font-size:30px;">Hello,
+        <h5 style="font-size:30px;">{% trans %}Czesc{% endtrans %},
             {{app.user.login}}</h5>
     </div>
 </body>
