--- a/templates/mainpage/navbar.html.twig
+++ b/templates/mainpage/navbar.html.twig
@@ -4,11 +4,11 @@
             <li class="nav-item">
                 <a class="nav-link close" data-widget="pushmenu" href="#" style="background-color:white">
                     <i class="fa fa-bars">
-                        {# Left content #}
                     </i>
                 </a>
             </li>
             <li class="nav-item d-none d-sm-inline-block"></li>
+            <li><i class="fas fa-flag-usa">sss</i></li>
         </ul>
        <a href="/logout" class="logout-button"> <i class="fas fa-sign-out-alt"></i></a>
     </nav>
