--- a/templates/posts/show_posts.html.twig
+++ b/templates/posts/show_posts.html.twig
@@ -1,6 +1,6 @@
 {% extends 'mainpage/main.html.twig' %}
 {% block content %}
-    <h1 style="margin:25px;">Show posts</h1>
+    <h1 style="margin:25px;">{% trans %}Show posts{% endtrans %}</h1>
     <div class="table">
         <table class="table table-striped">
             <thead>
