--- a/templates/posts/show_posts.html.twig
+++ b/templates/posts/show_posts.html.twig
@@ -4,85 +4,98 @@
     <div class="table">
         <table class="table table-striped">
             <thead>
-                <tr style="text-align: center;">
-                    <th scope="col">Title</th>
-                    <th scope="col">Date</th>
-                    <th scope="col">Show</th>
-                    <th scope="col">Edit</th>
-                    <th scope="col">Delete</th>
-                    <th scope="col">Send</th>
-                    <th scope="col">Status</th>
-                </tr>
+            <tr style="text-align: center;">
+                <th scope="col">Title</th>
+                <th scope="col">Date</th>
+                <th scope="col">Show</th>
+                <th scope="col">Edit</th>
+                <th scope="col">Delete</th>
+                <th scope="col">Send</th>
+                <th scope="col">Status</th>
+            </tr>
             </thead>
             <tbody>
-                {% for post in posts %}
-                    <tr style="text-align: center;">
-                        <td>{{ post.Title }}</td>
-                        <td>{{ post.Date|date("d/m/Y H:i") }}</td>
-                        <td>
-                            <a class="btn btn-success" href="/post/{{post.id}}">Show Post</a>
-                        </td>
-                        <td>
-                            <a class="btn btn-warning" href="/post/edit/{{ post.id }}">Edit Post</a>
-                        </td>
+            {% for post in posts %}
+                <tr style="text-align: center;">
+                    <td>{{ post.Title }}</td>
+                    <td>{{ post.Date|date("d/m/Y H:i") }}</td>
+                    <td>
+                        <a class="btn btn-success" href="/post/{{ post.id }}">Show Post</a>
+                    </td>
+                    <td>
+                        <a class="btn btn-warning" href="/post/edit/{{ post.id }}">Edit Post</a>
+                    </td>
 
-                        <td>
-                            <button onclick="get_number(this.id)" class="btn btn-outline-danger action_post" id="{{ post.id }}" data-target="#exampleModalCenterDelete" data-toggle="modal" type="button">
-                                <i class="fas fa-trash-alt"></i>
-                            </button>
-                        </td>
-                        <td>
-                            <button onclick="get_number(this.id)" class="btn btn-outline-primary action_post" id="{{ post.id }}" data-target="#exampleModalCenterSend" data-toggle="modal" type="button">
-                                <i class="fas fa-share-alt"></i>
-                            </button>
-                        </td>
-                        <td style = "font-size: 25px;">
-                            {% if post.status == 1 %}<i style = "color: green" class="fas fa-toggle-on"></i>{% else %}<i style = "color: gray" class="fas fa-toggle-off"></i>{% endif %}
-                        </td>
-                    </tr>
-                    <!-- Delete post modal -->
-                    <div aria-hidden="true" aria-labelledby="exampleModalCenterTitle" class="modal fade" id="exampleModalCenterDelete" role="dialog" tabindex="-1">
-                        <div class="modal-dialog modal-dialog-centered" role="document">
-                            <div class="modal-content">
-                                <div class="modal-body text-center">
-                                    <h1>
-                                        <i class="far fa-question-circle mt-2"></i>
-                                    </h1>
-                                    <h2 class="mt-4 mb-3">
-                                        <bold>Are you sure?</bold>
-                                    </h2>
-                                    <h5>Do you want to delete post?</h5>
-                                    <a class="action" id="/post/delete/">
-                                        <button class="delete btn-lg btn-outline-danger mt-5 mr-2">Delete</button>
-                                    </a>
-                                    <button class="btn-lg btn-outline-secondary mt-5 ml-2" data-dismiss="modal" type="button">Cancel</button>
-                                </div>
+                    <td>
+                        <button onclick="get_number(this.id)" class="btn btn-outline-danger action_post"
+                                id="{{ post.id }}" data-target="#exampleModalCenterDelete" data-toggle="modal"
+                                type="button">
+                            <i class="fas fa-trash-alt"></i>
+                        </button>
+                    </td>
+                    <td>
+                        <button onclick="get_number(this.id)" class="btn btn-outline-primary action_post"
+                                id="{{ post.id }}" data-target="#exampleModalCenterSend" data-toggle="modal"
+                                type="button">
+                            <i class="fas fa-share-alt"></i>
+                        </button>
+                    </td>
+                    <td style="font-size: 25px;">
+                        {% if post.status == 1 %}<i style="color: green" class="fas fa-toggle-on"></i>{% else %}<i
+                                style="color: gray" class="fas fa-toggle-off"></i>{% endif %}
+                    </td>
+                </tr>
+                <!-- Delete post modal -->
+                <div aria-hidden="true" aria-labelledby="exampleModalCenterTitle" class="modal fade"
+                     id="exampleModalCenterDelete" role="dialog" tabindex="-1">
+                    <div class="modal-dialog modal-dialog-centered" role="document">
+                        <div class="modal-content">
+                            <div class="modal-body text-center">
+                                <h1>
+                                    <i class="far fa-question-circle mt-2"></i>
+                                </h1>
+                                <h2 class="mt-4 mb-3">
+                                    <bold>Are you sure?</bold>
+                                </h2>
+                                <h5>Do you want to delete post?</h5>
+                                <a class="action" id="/post/delete/">
+                                    <button class="delete btn-lg btn-outline-danger mt-5 mr-2">Delete</button>
+                                </a>
+                                <button class="btn-lg btn-outline-secondary mt-5 ml-2" data-dismiss="modal"
+                                        type="button">Cancel
+                                </button>
                             </div>
                         </div>
                     </div>
-                    <!-- Delete post modal -->
-                    <!-- Send post modal -->
-                    <div aria-hidden="true" aria-labelledby="exampleModalCenterTitle" class="modal fade" id="exampleModalCenterSend" role="dialog" tabindex="-1">
-                        <div class="modal-dialog modal-dialog-centered" role="document">
-                            <div class="modal-content">
-                                <div class="modal-body text-center">
-                                    <h1>
-                                        <i class="far fa-question-circle mt-2"></i>
-                                    </h1>
-                                    <h2 class="mt-4 mb-3">
-                                        <bold>Are you sure?</bold>
-                                    </h2>
-                                    <h5>Do you want to send post?</h5>
-                                    <a class="action" id="/post/send/">
-                                        <button class="send btn-lg btn-outline-primary mt-5 mr-2" data-dismiss="modal" type="button">Send</button>
-                                    </a>
-                                    <button class="btn-lg btn-outline-secondary mt-5 ml-2" data-dismiss="modal" type="button">Cancel</button>
-                                </div>
+                </div>
+                <!-- Delete post modal -->
+                <!-- Send post modal -->
+                <div aria-hidden="true" aria-labelledby="exampleModalCenterTitle" class="modal fade"
+                     id="exampleModalCenterSend" role="dialog" tabindex="-1">
+                    <div class="modal-dialog modal-dialog-centered" role="document">
+                        <div class="modal-content">
+                            <div class="modal-body text-center">
+                                <h1>
+                                    <i class="far fa-question-circle mt-2"></i>
+                                </h1>
+                                <h2 class="mt-4 mb-3">
+                                    <bold>Are you sure?</bold>
+                                </h2>
+                                <h5>Do you want to send post?</h5>
+                                <a class="action" id="/post/send/">
+                                    <button class="send btn-lg btn-outline-primary mt-5 mr-2" data-dismiss="modal"
+                                            type="button">Send
+                                    </button>
+                                </a>
+                                <button class="btn-lg btn-outline-secondary mt-5 ml-2" data-dismiss="modal"
+                                        type="button">Cancel
+                                </button>
                             </div>
                         </div>
                     </div>
-                    <!-- Send post modal -->
-                {% endfor %}
+                </div>
+                <!-- Send post modal -->
+            {% endfor %}
             </tbody>
         </table>
     </div>
